# info3dm

./: README.md  pyproject.toml
ex4/: dataset1.py  test_dataset1.py
language_processing_100/: ch1.py
linear_regression/: datasets.py  regression.py  run.py
matplotlib-ex/: matplotlib-ex.py
numpy-ex/: numpy-ex.py
numpy-tutorial/: tutor.py
sklearn-ex/: sklearn-ex.ipynb
w1-homework/: example_plot.ipynb
