[project]
name = "info3dm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.9.0",
    "ipykernel>=7.2.0",
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "jupyter-client>=8.8.0",
    "jupyterlab>=4.5.6",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pynvim>=0.6.0",
    "scikit-learn>=1.8.0",
]
